# aerothemeplasma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  INSTALL.md  README.md  compile.sh  install.sh  install_kwin_components.sh  install_misc_components.sh  install_plasma_components.sh  install_plasmoids.sh
Documentation/Software/KWin/: Reflection.md
Documentation/Software/Plasmoids/: SevenStart.md  SevenTasks.md
Documentation/Themes/: Seven-Black.md  Smaragd-Theme.md
Icons and cursors/: index.theme
KWin/.emerald/theme/: buttons.close.kra  buttons.max.kra  buttons.min.kra  buttons.min.kra~
KWin/Deprecated/.emerald/theme/: .directory  Close.kra~  buttons.close.kra~  buttons.close.png~  buttons.max.kra~  theme.ini
KWin/kwin_fixblur/: CMakeLists.txt
KWin/kwin_fixblur/src/: CMakeLists.txt  blur.cpp  blur.h  metadata.json
KWin/kwin_fixblur/src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.h  blur_config.ui
KWin/kwin_reflect/src/: blur.cpp  blur.h  blur.kcfg  blur.qrc
KWin/smod_kwin_theme/: README  build-decoration.sh  build-effect.sh  install-decoration.sh  install-effect.sh  install-resources.sh  rebuild-decoration.sh  rebuild-effect.sh  uninstall-decoration.sh  uninstall-effect.sh
KWin/smod_kwin_theme/breeze/: CMakeLists.txt
KWin/smod_kwin_theme/breeze/kdecoration/: CMakeLists.txt  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezesettingsdata.kcfg  breezesettingsprovider.cpp  smod.json
KWin/smod_kwin_theme/breeze/kdecoration/config/: CMakeLists.txt  breezeconfigwidget.cpp
KWin/smod_kwin_theme/breeze/libbreezecommon/: CMakeLists.txt
KWin/smod_kwin_theme/kwin-effect-smodwindowbuttons/: CMakeLists.txt  README
KWin/smod_kwin_theme/kwin-effect-smodwindowbuttons/shaders/: shader.frag  shader_core.frag
KWin/smod_kwin_theme/kwin-effect-smodwindowbuttons/src/: plugin.cpp  smodwindowbuttons.cpp  smodwindowbuttons.h  smodwindowbuttons.json  smodwindowbuttons.qrc
KWin/smod_kwin_theme/patches/: breeze.patch
KWin/smod_kwin_theme/resources/: buttongloweffecttextures.smod.rcc  decoration.smod.rcc
KWin/smod_kwin_theme/upstream/: upstream.txt
Plasma/Color_Scheme/: AeroColorScheme.colors
Plasma/KDE_Plasma_Theme/Seven-Black/: colors
Plasma/Look_and_Feel/authui7/: metadata.json
Plasma/Plasma_Widgets/System/: DefaultToolTip.qml
Plasma/SDDM/sddm-theme-smod/: Main.qml  metadata.desktop  theme.conf
kwin/decoration/: CMakeLists.txt
kwin/decoration/breeze-v5.93.0/: CMakeLists.txt
kwin/decoration/kdecoration/: CMakeLists.txt  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  sizingmargins.cpp  sizingmargins.h  smod.json
kwin/effects/seventasks-thumbnails/: metadata.json
kwin/effects/smodpeekeffect/: metadata.json
kwin/effects_cpp/aeroglide/: CMakeLists.txt
kwin/effects_cpp/deprecated/kwin_fixblur/src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.ui
kwin/effects_cpp/kde-effects-aeroglassblur/: CMakeLists.txt
kwin/effects_cpp/kde-effects-aeroglassblur/src/: CMakeLists.txt  aeroblur.qrc  blur.cpp  blur.h  blur.kcfg  metadata.json  wackyfunc.h
kwin/effects_cpp/kde-effects-aeroglassblur/src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.ui  colorwindow.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
kwin/effects_cpp/kde-effects-aeroglassblur/src/shaders/: basic_core.frag  downsample_core.frag  reflect.frag  reflect_core.frag  upsample.frag  upsample_core.frag
kwin/effects_cpp/kde-effects-aeroglassblur/src/shaders/aero/: advanced.frag  advanced_core.frag  basic.frag  basic_core.frag  opaque.frag
kwin/effects_cpp/kde-effects-forceblur/: CMakeLists.txt  README.md
kwin/effects_cpp/kde-effects-forceblur/src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.h  blur_config.ui  colorwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
kwin/effects_cpp/kwin-effect-smodsnap-v2/: CMakeLists.txt  install.sh  install_ninja.sh
kwin/effects_cpp/kwin_fixblur/: CMakeLists.txt
kwin/effects_cpp/kwin_fixblur/src/: CMakeLists.txt  blur.cpp  blur.h  metadata.json
kwin/effects_cpp/kwin_fixblur/src/kcm/: blur_config.cpp  blur_config.h
kwin/effects_cpp/smodglow/: CMakeLists.txt
kwin/effects_cpp/startupfeedback/: CMakeLists.txt
kwin/effects_cpp/startupfeedback/src/: CMakeLists.txt  metadata.json  startupfeedback.cpp  startupfeedback.h
kwin/outline/plasma/: outline.qml
misc/defaulttooltip/: DefaultToolTip.qml  install.sh  install_ninja.sh  plasmawindow.cpp  tooltiparea.cpp
misc/deprecated/plymouth/plymouth-theme-smod/: CMakeLists.txt  README.md  smod-plymouth-wait-for-animation-poweroff.service  smod-plymouth-wait-for-animation.service  smod.script
misc/deprecated/plymouth/plymouth-theme-smod/src/: extract-assets.sh
misc/deprecated/plymouth/plymouth-theme-smod/src/imagemagick/: build-imagemagick.sh  install-imagemagick.sh  uninstall-imagemagick.sh
misc/deprecated/plymouth/plymouth-theme-smod/test/: test-plymouth-password.sh  ubuntu-install-plymouth-theme.sh
misc/plymouth/PlymouthVista/: PlymouthVista.script  compile.sh  plymouth_state_updater.sh
misc/plymouth/plymouth-theme-smod/: smod.plymouth
misc/uac-polkitagent/: install.sh  install_ninja.sh
misc/uac-polkitagent/patches/: policykit1-kde.notifyrc
plasma/color_scheme/: Aero.colors  AeroColorScheme1.colors
plasma/desktoptheme/Seven-Black/: metadata.json
plasma/look-and-feel/authui7/: metadata.json
plasma/plasmoids/io.gitgud.wackyideas.SevenStart/: metadata.json  metadata.json.old
plasma/plasmoids/io.gitgud.wackyideas.keyboardlayout/: metadata.json
plasma/plasmoids/io.gitgud.wackyideas.notifications/: metadata.json
plasma/plasmoids/io.gitgud.wackyideas.seventasks/: metadata.json
plasma/plasmoids/org.kde.plasma.systemtray/: metadata.json
plasma/sddm/entries/: aerothemeplasma.desktop  aerothemeplasmax11.desktop  startatp-wayland
plasma/sddm/login-sessions/: install.sh
plasma/sddm/sddm-theme-mod/: Main.qml  metadata.desktop  theme.conf
plasma/smod/: decoration.smod.rcc  smodgloweffecttextures.smod.rcc
plasma/smod/decorations/: Aero.smod.rcc
(+296 files in other folders)
